# domainidom

./: .gitignore  AGENTS.md  COPILOT_PR_FORMATTING_FIX.md  DOMAIN_AGENCY_SWARM.md  MULTI_AGENT_GUIDE.md  MULTI_REGISTRAR_GUIDE.md  README.md  domain_cache.sqlite3  pyproject.toml
.github/workflows/: ci.yml
domainidom/: analyze.py  api.py  brainstorm.py  cli.py  config.py  models.py  multi_agent.py  package.py  research.py
domainidom.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
domainidom/services/: domain_check.py  pricing.py
domainidom/storage/: cache.py
domainidom/utils/: phonetics.py
examples/: scope.md
tests/: test_domain_cache.py  test_domain_check_service_cache.py  test_mcp_fastdomaincheck.py  test_multi_agent.py  test_multi_registrar_functional.py  test_multi_registrar_integration.py  test_multi_registrar_pricing.py  test_phonetics.py
